@@ -289,13 +289,6 @@ mvn clean install -Drun.test="com/sun/ts/tests/jacc/web/toolsContracts/Client.ja
                                         <env key="AS_JAVA" value="${java.home}"/>
                                     </exec>
 
-                                    <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" if:set="glassfish.security.manager" failonerror="true">
-                                        <arg value="create-jvm-options" />
-                                        <arg value="--port=${port.admin}" />
-                                        <arg value="&quot;-Djava.security.manager&quot;" />
-                                        <env key="AS_JAVA" value="${java.home}"/>
-                                    </exec>
-
                                     <if>
                                         <isset property="jacoco.version" />
                                         <then>
